--- a/src/index.css
+++ b/src/index.css
@@ -610,6 +610,13 @@ video {
   }
 }
 
+.panel {
+  background-color: #fff;
+  border-radius: 0.25rem;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border-top-width: 4px;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
